--- a/package.json
+++ b/package.json
@@ -39,22 +39,27 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "class-variance-authority": "^0.7.0",
+    "calendar": "^0.1.1",
+    "chart": "^0.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.0.8",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.8.1",
     "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.2",
+    "shadcn": "^2.4.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0",
     "vaul": "^1.0.0",
